--- a/frontdend/assets/css/main.css
+++ b/frontdend/assets/css/main.css
@@ -1,383 +1,421 @@
 .container {
-  width: 100%;
+    width: 100%;
 }
 .header {
-  background-color: #02bbff;
-  height: 148px;
-  width: 100%;
-  /* display: table;
+    background-color: #02bbff;
+    height: 25%;
+    width: 100%;
+    /* display: table;
   position: fixed; */
+    /* width: 100%; */
 }
 .header-with-search {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 .header__logo a img {
-  width: 249px;
-  height: 62px;
+    width: 80%;
+    height: 80%;
 }
 .header__search {
-  display: flex;
-  align-items: center;
-  height: 4rem;
+    display: flex;
+    align-items: center;
+    height: 4rem;
+    width: 55%;
 }
-.header__search input[type="text"] {
-  width: 75.625rem;
-  border-radius: 5px 0px 0px 5px;
-  border: 1px solid var(--white-color);
-  border-right: unset;
-  height: 100%;
+.header__search input[type='text'] {
+    width: 100%;
+    border-radius: 5px 0px 0px 5px;
+    border: 1px solid var(--white-color);
+    border-right: unset;
+    height: 100%;
 }
-.header__search input[type="text"]:focus-visible {
-  outline: unset;
+.header__search input[type='text']:focus-visible {
+    outline: unset;
 }
 .header__search button {
-  width: 4.125rem;
-  border: 1px solid var(--white-color);
-  border-left: unset;
-  height: 100%;
-  border-radius: 0px 5px 5px 0px;
-  background-color: var(--white-color);
+    width: 10%;
+    border: 1px solid var(--white-color);
+    border-left: unset;
+    height: 100%;
+    border-radius: 0px 5px 5px 0px;
+    background-color: var(--white-color);
 }
 .header__register {
-  display: flex;
-  justify-content: center;
-  width: 200px;
-  justify-content: space-between;
+    display: flex;
+    justify-content: center;
+    width: 10%;
+    justify-content: space-between;
 }
 .header__register-item {
-  display: flex;
-  align-items: center;
+    display: flex;
+    align-items: center;
 }
 .header__register-item .register__icon a i {
-  font-size: 20px;
-  margin-right: 15px;
-  align-self: center;
-  color: var(--white-color);
+    font-size: 1vw;
+    margin-right: 15px;
+    align-self: center;
+    color: var(--white-color);
 }
 .register__title a p {
-  line-height: 1.24vw;
-  font-size: 0.84vw;
-  color: var(--white-color);
-  font-weight: 400;
+    line-height: 1.24vw;
+    font-size: 0.84vw;
+    color: var(--white-color);
+    font-weight: 400;
 }
 .header__cart-item {
-  align-self: center;
+    align-self: center;
+}
+.cart__icon a img {
+    width: 100%;
+    height: 100%;
 }
 .header-with-menu {
-  text-align: center;
+    text-align: center;
 }
 .header-with-menu ul li {
-  display: inline-block;
-  padding: 10px;
+    display: inline-block;
+    padding: 10px;
 }
 .header-with-menu ul li a {
-  font-size: 1vw;
-  line-height: 0.95vw;
-  font-weight: 700;
-  color: var(--white-color);
+    font-size: 1vw;
+    line-height: 0.95vw;
+    font-weight: 700;
+    color: var(--white-color);
 }
 .header-with-menu ul li:hover {
-  transition: all 0.5s;
-  background-color: var(--white-color);
-  border-radius: 5px;
+    transition: all 0.5s;
+    background-color: var(--white-color);
+    border-radius: 5px;
 }
 .header-with-menu ul li:hover a,
 .menu-child:hover ul li:hover a {
-  color: var(--main-color);
+    color: var(--main-color);
 }
 .header-with-menu ul .menu-slected a {
-  color: red;
+    color: red;
 }
 .menu-child ul {
-  display: none;
-  padding: 5px;
-  position: fixed;
-  min-width: 350px;
-  margin-top: 10px;
-  background-color: var(--main-color);
-  border-radius: 5px;
+    display: none;
+    padding: 5px;
+    position: fixed;
+    min-width: 350px;
+    margin-top: 10px;
+    background-color: var(--main-color);
+    border-radius: 5px;
 }
 .menu-child:hover ul {
-  display: block;
+    display: block;
 }
 .menu-child:hover ul li {
-  display: block;
+    display: block;
 }
 .menu-child:hover ul li a {
-  color: var(--white-color);
+    color: var(--white-color);
 }
 .footer {
-  width: 100%;
-  margin-top: 1.25rem;
+    width: 100%;
+    margin-top: 1.25rem;
 }
 .row-footer-mangtrithuc {
-  background-color: var(--main-color);
-  text-align: center;
-  color: var(--white-color);
-  padding: 2.25rem;
-  font-size: 1.24vw;
-  font-weight: bold;
-  text-transform: uppercase;
+    background-color: var(--main-color);
+    text-align: center;
+    color: var(--white-color);
+    padding: 2.25rem;
+    font-size: 1.24vw;
+    font-weight: bold;
+    text-transform: uppercase;
 }
 .row-footer-mangtrithuc a {
-  color: var(--white-color);
+    color: var(--white-color);
 }
 .row-footer {
-  margin: 5px 0;
+    margin: 10px;
 }
 .row,
 .third {
-  display: flex;
-  justify-content: space-around;
-  /* align-items: center; */
+    display: flex;
+    justify-content: space-around;
+    /* align-items: center; */
 }
 .third {
-  flex: 1;
+    flex: 1;
 }
 .item__footer ul li {
-  display: flex;
-  flex-direction: column;
-  padding: 5px;
-  list-style: none;
-  font-size: 1vw;
-  line-height: 1.46vw;
+    display: flex;
+    flex-direction: column;
+    padding: 5px;
+    list-style: none;
+    font-size: 1vw;
+    line-height: 1.46vw;
 }
 .item__footer-title {
-  font-weight: bold;
-  font-size: 1vw;
-  line-height: 1.46vw;
-  /* color: var(--text-color); */
+    font-weight: bold;
+    font-size: 1vw;
+    line-height: 1.46vw;
+    /* color: var(--text-color); */
 }
 .row-second {
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  gap: 20px;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    gap: 20px;
 }
 .item__footer ul li a {
-  color: var(--text-color);
+    color: var(--text-color);
 }
 
 .row-footer-title {
-  margin-left: 1.3vw;
+    margin-left: 1.3vw;
 }
 .row-footer-title h2 {
-  font-size: 1.17vw;
-  line-height: 1.54vw;
-  font-weight: 600;
-  text-transform: uppercase;
-  margin-top: 1.24vw;
-  margin-bottom: 0.73vw;
+    font-size: 1.17vw;
+    line-height: 1.54vw;
+    font-weight: 600;
+    text-transform: uppercase;
+    margin-top: 1.24vw;
+    margin-bottom: 0.73vw;
 
-  color: var(--text-color);
+    color: var(--text-color);
 }
 .row-second .item__footer h3 {
-  color: #ffac29;
-  font-size: 1.1vw;
-  line-height: 0.95vw;
-  font-weight: 700;
+    color: #ffac29;
+    font-size: 1.1vw;
+    line-height: 0.95vw;
+    font-weight: 700;
 }
 .row-second .item__footer a,
 p {
-  font-size: 0.96vw;
-  line-height: initial;
-  font-style: initial;
-  text-align: justify;
-  font-weight: 400;
-  margin-top: 0.87vw;
+    font-size: 0.96vw;
+    line-height: initial;
+    font-style: initial;
+    text-align: justify;
+    font-weight: 400;
+    margin-top: 0.87vw;
 }
 .item__footer .center li {
-  display: inline-block;
+    display: inline-block;
 }
 .border {
-  margin-top: 20px;
-  border-top: 1px solid var(--main-color);
+    margin-top: 20px;
+    border-top: 1px solid var(--main-color);
 }
-.banner {
-  text-align: center;
-  margin: 20px;
-}
+
 .slider {
-  width: 1200px;
-  height: 100%;
-  border-radius: 10px;
-  overflow: hidden;
-  margin: 10px auto;
+    width: 65%;
+    height: 100%;
+    border-radius: 10px;
+    overflow: hidden;
+    margin: 10px auto;
 }
 .slides {
-  width: 500%;
-  height: 500px;
-  display: flex;
+    width: 500%;
+    height: 500px;
+    display: flex;
 }
 .slides input {
-  display: none;
+    display: none;
 }
 .slide {
-  width: 20%;
-  transition: 2s;
+    width: 20%;
+    transition: 2s;
 }
 .slide img {
-  width: 100%;
-  height: 100%;
+    width: 100%;
+    height: 100%;
 }
 .navigation-manual {
-  position: absolute;
-  width: 1200px;
-  margin-top: -40px;
-  display: flex;
-  justify-content: center;
+    position: absolute;
+    width: 65%;
+    margin-top: -40px;
+    display: flex;
+    justify-content: center;
 }
 
 .manual-btn {
-  border: 2px solid var(--main-color);
-  padding: 5px;
-  border-radius: 10px;
-  cursor: pointer;
-  transition: 1s;
+    border: 2px solid var(--main-color);
+    padding: 5px;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: 1s;
 }
 .manual-btn:not(:last-child) {
-  margin-right: 40px;
+    margin-right: 40px;
 }
 .manual-btn:hover {
-  background-color: var(--main-color);
+    background-color: var(--main-color);
 }
 #radio1:checked ~ .first {
-  margin-left: 0;
+    margin-left: 0;
 }
 #radio2:checked ~ .first {
-  margin-left: -20%;
+    margin-left: -20%;
 }
 #radio3:checked ~ .first {
-  margin-left: -40%;
+    margin-left: -40%;
 }
 .navigation-auto {
-  position: absolute;
-  display: flex;
-  width: 1200px;
-  justify-content: center;
-  margin-top: 460px;
+    position: absolute;
+    display: flex;
+    width: 65%;
+    justify-content: center;
+    margin-top: 460px;
 }
 .navigation-auto div {
-  border: 2px solid var(--main-color);
-  padding: 5px;
-  border-radius: 10px;
-  transition: 1s;
+    border: 2px solid var(--main-color);
+    padding: 5px;
+    border-radius: 10px;
+    transition: 1s;
 }
 .navigation-auto div:not(:last-child) {
-  margin-right: 40px;
+    margin-right: 40px;
 }
 #radio1:checked ~ .navigation-auto .auto-btn1 {
-  background-color: var(--main-color);
+    background-color: var(--main-color);
 }
 #radio2:checked ~ .navigation-auto .auto-btn2 {
-  background-color: var(--main-color);
+    background-color: var(--main-color);
 }
 #radio3:checked ~ .navigation-auto .auto-btn3 {
-  background-color: var(--main-color);
+    background-color: var(--main-color);
 }
 .home-title {
-  width: 90%;
-  margin: auto;
-  display: flex;
-  align-items: center;
-  height: 3.6vw;
+    width: 90%;
+    margin: auto;
+    display: flex;
+    align-items: center;
+    height: 3.6vw;
 }
 .home-title div:not(:last-child) {
-  margin-right: 10px;
+    margin-right: 10px;
 }
 .home-title .title-icon {
-  font-size: 3.2vw;
-  color: #ec4545;
+    font-size: 3.2vw;
+    color: #ec4545;
 }
 .home-title .title-text {
-  font-size: 1.8vw;
-  width: 16.4vw;
+    font-size: 1.8vw;
+    width: 16.4vw;
 }
 .home-title .title-border {
-  border: 8px solid #f7f7f7;
-  width: 100%;
+    border: 8px solid #f7f7f7;
+    width: 100%;
 }
-.show {
-  position: relative;
-  overflow-x: scroll;
-  overflow-y: hidden;
-}
-.show::-webkit-scrollbar {
-  display: none;
-}
-.ctr-btn {
-  position: absolute;
-  top: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  width: 100%;
-}
-.ctr-btn.pre {
-  left: 0;
-}
-.ctr-btn.next {
-  right: 0;
-}
-.item-body {
-  display: flex;
-  justify-items: center;
-  /* grid-template-rows: 55%; */
-  align-items: center;
-  gap: 60px;
-  transition: 0.3s left ease-in-out;
-  /* overflow: hidden; */
-}
-.pre,
-.next {
-  font-size: 1.6vw;
-  cursor: pointer;
-  margin: 0 10px;
+#slider {
+    /* position: relative; */
+    overflow-x: scroll;
+    overflow-y: hidden;
+    width: 100%;
+    /* height: 380px; */
 }
 
+.show::-webkit-scrollbar {
+    display: none;
+}
+.product {
+    display: grid;
+    justify-items: center;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: 50%;
+    align-items: center;
+    gap: 30px;
+}
+.ctr-btn.pre {
+    left: 0;
+}
+.ctr-btn.next {
+    right: 0;
+}
+#slider #slide {
+    display: flex;
+    /* position: absolute; */
+    left: 0;
+    transition: 0.3s left ease-in-out;
+    align-items: center;
+    justify-content: space-between;
+}
+#slider #slide:not(:last-child) {
+    margin-right: 100px;
+}
+.item-body {
+    display: flex;
+    justify-items: center;
+    grid-template-rows: 55%;
+    align-items: center;
+    gap: 60px;
+}
+.ctr-btn {
+    display: none;
+    font-size: 1vw;
+    padding: 20px 20px;
+    min-width: 50px;
+    background: var(--black-color);
+    border: none;
+    font-weight: 600;
+    text-align: center;
+    cursor: pointer;
+    outline: none;
+    position: absolute;
+    top: 50%;
+    margin-top: -27.5px;
+    color: var(--white-color);
+    border-radius: 100%;
+}
+.fa-chevron-right {
+    right: 0;
+}
+.fa-chevron-left {
+    left: 0;
+}
 .item-child {
-  text-align: center;
-  padding: 30px;
-  width: 75%;
-  height: 100%;
+    text-align: center;
+    padding: 30px;
+    width: 75%;
+    height: 100%;
 }
 .item-img img {
-  width: 100%;
-  height: 100%;
+    width: 100%;
+    height: 100%;
 }
 .item-child div:not(:first-child) {
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  width: 100%;
-  height: 6%;
-  margin-top: 10px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: 100%;
+    height: 6%;
+    margin-top: 10px;
 }
 .item-name h4 {
-  font-size: 1.4vw;
+    font-size: 1.4vw;
 }
 .item-author a {
-  font-size: 0.8vw;
-  color: var(--main-color);
+    font-size: 0.8vw;
+    color: var(--main-color);
 }
 .discount {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .discount span {
-  color: grey;
-  font-size: 0.8vw;
-  margin-right: 5px;
-  text-decoration: line-through;
+    color: grey;
+    font-size: 0.8vw;
+    margin-right: 5px;
+    text-decoration: line-through;
 }
 .discount p {
-  margin-top: 0;
-  font-size: 0.9vw;
+    margin-top: 0;
+    font-size: 0.9vw;
 }
 .item-child:hover {
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
-    rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
-  transition: all 0.5s;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+    transition: all 0.5s;
+}
+.banner {
+    text-align: center;
+    margin: 20px;
+}
+.banner img {
+    width: 100%;
+    height: 100%;
 }
