còn phần css cho đẹp hehe

--- a/fondend/cart/css.css
+++ b/fondend/cart/css.css
@@ -77,7 +77,7 @@
 .cart>p{
     font-size: 23px;
     text-align: center;
-    width: 12%;
+    width: 18%;
     border-bottom: 1px solid #02bbff;
 }
 .cart_bottom>p{
@@ -262,9 +262,10 @@ body{
     font-weight: 600;
     font-size: 21px;
 }
-#font800{
-    font-weight: 800;
-    font-size: 23px;
+
+#font_size18{
+    font-size: 16px;
+    font-weight: 600;
 }
 .title_dc_nhanhang{
     font-weight: 600;
@@ -286,19 +287,19 @@ body{
     position: fixed;
     right: 0;
     left: 0;
-    top: 0;
-    bottom:0;
+    top: -10%;
+    bottom:-10%;
     background-color: rgba(0, 0, 0,0.3);
     display: none;
 }
 .thanhtoan_xacnhan{
     position: fixed;
-    top: 10%;
+    top: 1%;
     left: 10%;
     right: 10%;
     bottom: 10%;
     max-width: 90%;
-    max-height: 90%;
+    height: 550px;
     background-color: white;
     border-radius: 1%;
     padding: 1% 2%;
@@ -316,4 +317,22 @@ body{
 }
 .xac_nhan{
     display: none;
+}
+body{
+    font-family: "Roboto Light", sans-serif
+}
+.xacnhan_dathang p{
+    width: 170px;
+    height: 50px;
+    line-height: 50px;
+    padding: 0 5px;
+    border-radius: 5px;
+    background: #ff990f;
+    color: white;
+    font-size: 16px;
+    font-weight: bold;
+}
+.xacnhan_dathang a{
+    text-decoration: none;
+    float: right;
 }
