--- a/fondend/cart/css-infor-user.css
+++ b/fondend/cart/css-infor-user.css
@@ -1,11 +1,70 @@
 .body_infor_user {
     background: rgb(251 244 244);;
     max-width: 100%;
-    height: 690px;
+    height: 700px;
     margin-top: -48px;
     padding-top: 5%;
+    font-family: Roboto;
 }
-
+.infor_user input{
+    display: block;
+    width: 80%;
+    min-height: calc(1.5em + 0.75rem + 2px);
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #495057;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: 2px;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+.edit_password{
+    padding: 10% 5% 0% 5%;
+}
+.edit_password input{
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #495057;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: 2px;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+.profile_button{
+    box-shadow: none;
+    background: rgb(99, 39, 120);
+    border-width: initial;
+    border-style: none;
+    border-color: initial;
+    border-image: initial;
+    color: #fff;
+    padding: 2% 4%;
+    border-radius: 4px;
+    font-size: 17px;
+}
+.container_infor_user{
+    background-color: white;
+    display: grid;
+    max-width: 80%;;
+    grid-template-columns: 30% 40% 30%;
+    max-height:100%;
+    margin: 0 10%;
+}
+.img_infor{
+    text-align: center;
+}
+.infor_user{
+    border-left: 1px solid gray;
+    border-right: 1px solid gray;
+    padding: 1% 3%;
+    font-family: inherit;
+}
 .form-control:focus {
     box-shadow: none;
     border-color: #BA68C8
@@ -52,4 +111,7 @@
 
 .thaydoi_hien{
     display: none;
+}
+.labes{
+    font-size: 11px;
 }
