--- a/fondend/cart/css-infor-user.css
+++ b/fondend/cart/css-infor-user.css
@@ -60,8 +60,8 @@
     text-align: center;
 }
 .infor_user{
-    border-left: 1px solid gray;
-    border-right: 1px solid gray;
+    border-left: 1px solid #ced4da;
+    border-right: 1px solid #ced4da;
     padding: 1% 3%;
     font-family: inherit;
 }
