--- a/fondend/phungps24202/assets/css/detail.css
+++ b/fondend/phungps24202/assets/css/detail.css
@@ -1,91 +1,139 @@
+.container-ct{
+    width: 1200px;
+    margin: 0 auto;
+    padding: 15px;
+    border: 1px solid red;
+}
 .detail{
-    max-width: 1170px;
+    
+    display: flex;
+    padding: 0;
+}
+        /* Danh mục  */
+.breadcrumb-bound ul.breadcrumb-navigation{
+    margin-bottom: 8.8px;
+    display: inline-flex;
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
+.breadcrumb-bound li a{
+    color: #a3a3a3;
+    letter-spacing: 0;
+    font-size: 16px;
+}
+    /* end danh mục */
+
+.detail-box1{
+    width: 55%;
+    position: relative;
+    /* border: 1px solid red; */
+    
+}
+.detail-box1_img{
+    width: 100%;
+
+    position: absolute;
+    text-align: center;
+    opacity: 1;
+    padding-top: 25px;
+    transition: all 0.3s ease;
+    /* box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; */
+        border-radius: 20px;
+}
+.detail-box1_img img{
+    width: 75%;
+}
+.detail-introduce h3{
+    margin-top: 550px;
+    text-transform: uppercase;
+    text-decoration: none;
+    margin-bottom: 10px;
+    font-weight: 700;
+    color: #2b2b2b;
+}
+.detail-box1_describe{
+    font-size: 17px;
+    letter-spacing: 1px;
+    line-height: 22px;
+    font-weight: 400;
+    color: #696969;
+}
+
+
+        /* Box2 */
+.detail-box2{
+    width: 45%;
+    padding: 12px 24px;
     margin: 0 auto;
 }
-article.detail-box{
-    display: flex;
-}
-article .detail-box1{
-    
-    justify-content: center;
-    /* border: 1px solid red; */
-}
-article .detail2-soluong button{
-    margin-top: 10px;
-    width: 40px;
-    height: 40px;
-    /* outline: none; */
-    background: none;
-    border: 1px solid black;
-    cursor: pointer;
-}
-article .detail2-soluong button:hover{
-    background-color: #ececec;
-}
-article .detail2-soluong button svg{
-    color: #909090;
-}
-article .detail2-soluong button svg:hover{
-    color: #4f4f4f;
+
+.detail-box2 .detail-box2_content{
+    position: sticky;
+    top: 30px;
 }
 
 
-article .detail2-soluong #amount{
-    width: 60px;
-    height: 40px;
-    text-align: center;
-    font-size: 28px;
-}
-article .detail-box2{
-    margin-left: 190px;
-}
-article .detail2-title h3{
+.detail2-title h3{
+   
     font-family: 'Open Sans', sans-serif;
     font-family: 'Roboto', sans-serif;
     font-size: 24px;
     font-weight: bold;
     text-transform: uppercase;
 }
-article .detail2-author p{
+.detail2-author p{
     font-size: 20px;
     /* text-decoration: none; */
 }
-article .detail2-author a{
+.detail2-author a{
     text-decoration: none;
     color: #00B2EE;
+    font-weight: 400;
 }
-article  span.text-muted{
+span.text-muted{
     font-size: 24px;
     color: #909090;
 }
-article  span.text-muted a{
+  span.text-muted a{
     font-size: 16px;
     color: #909090;
 }
-article .detail2-price{
+.detail2-price {
+    /* margin-top: 12px; */
+    display: flex;
+  }
+  
+  .detail2-price__reduced {
     font-size: 40px;
-    margin-top: 10px;
+    font-weight: 600;
     color: red;
-    font-weight: bold;
-}
+  }
+  
+  .detali2-price__original{
+    font-size: 24px;
+    font-weight: 600;
+    margin-top: 56px;
+    margin-left: 20px;
+  }
  
-article .detail-box2 p.transport{
+ .detail-box2 p.transport{
     font-size: 18px;
 }
-article .detail2-status p.status{
+ .detail2-status p.status{
     font-size: 18px;
     font-weight: bold;
 }
-article .detail2-status p.status span{
+ .detail2-status p.status span{
     margin-left: 50px;
     color: #00B2EE;
 }
-article .detail2-soluong span.quantity{
+ .detail2-soluong span.quantity{
     font-size: 18px;
 
     font-weight: bold;
 }
-article .detail2-buy button{
+ .detail2-buy button{
     background-color: #4CAF50; /* Màu nền */
     border: none; /* Không có đường viền */
     color: white; /* Màu chữ */
@@ -98,12 +146,29 @@ article .detail2-buy button{
     border-radius: 4px; /* Bo tròn các góc */
     margin-top: 20px;
 }
-article .detail2-buy button:hover{
+ .detail2-buy button:hover{
     background-color: #3e8e41;
 }
-article .detail2-buy button.buy2{
+ .detail2-buy button.buy2{
     background-color: #FFD700;
 }
-article .detail2-buy button.buy2:hover{
+ .detail2-buy button.buy2:hover{
     background-color: #CDAD00;
+}
+/* end-detail2 */
+
+/* comment */
+.title-comment{
+    border: 1px solid red;
+    width: 1230px;
+    margin: 0 auto;
+}
+.title-comment h3{
+    text-align: center;
+    text-transform: uppercase;
+    margin-top: 0.46875vw;
+    margin-bottom: 0.85vw;
+    font-size: 20px;
+    color: #2b2b2b;
+    font-weight: bold;
 }
