--- a/fondend/phungps24202/assets/css/detail.css
+++ b/fondend/phungps24202/assets/css/detail.css
@@ -2,7 +2,7 @@
     width: 1200px;
     margin: 0 auto;
     padding: 15px;
-    border: 1px solid red;
+    border-bottom: 1px inset #d3c5ca;
 }
 .detail{
     
@@ -157,13 +157,13 @@ span.text-muted{
 }
 /* end-detail2 */
 
-/* comment */
-.title-comment{
-    border: 1px solid red;
+/* user */
+.user{
+    /* border: 1px inset #d3c5ca; */
     width: 1230px;
     margin: 0 auto;
 }
-.title-comment h3{
+.user-title h3{
     text-align: center;
     text-transform: uppercase;
     margin-top: 0.46875vw;
@@ -172,3 +172,76 @@ span.text-muted{
     color: #2b2b2b;
     font-weight: bold;
 }
+
+.user-form{
+    padding: 16px 20px;
+    position: relative;
+    width: 1190px;
+    /* border: 1px inset #d3c5ca; */
+}
+.form-group{
+    display: flex;
+    position: relative;
+}
+.form-group textarea{
+    height: 72px;
+    width: 100% ;
+    font-size: 16px;
+    line-height: 2; 
+    border-bottom: 1px solid #cbd1d6;
+    resize: none;
+    border-radius: 6px;
+}
+
+.form-group button{
+    height: 36px;
+    width: auto;
+    white-space: nowrap;
+    position: absolute;
+    right: 16px;
+    top: 36px;
+    font-weight: 300;
+    background: #cb1c22;;
+    color: #fff;
+    outline: none;
+    transform: translateY(-50%);
+    font-size: 16px;
+    line-height: 16px;
+    border-radius: 6px;
+    padding: 0 16px;
+    border: 1px solid transparent;
+    cursor: pointer;
+}
+.form-group button:hover{
+    background: #900000;
+}
+/* comment */
+.user-wrapper .user-avatar img{
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+
+}
+.user-wrapper{
+    display: flex;
+    margin-bottom: 20px;
+}
+.user-avatar{
+    margin: 16px;
+}
+.comment-body h4{
+    margin: 0;
+    margin-top: 16px;
+    font-size: 18px;
+  }
+.comment-body p{
+    margin: 10px 0;
+    font-size: 16px;
+  }
+  
+.comment-body span {
+    color: #999;
+    font-size: 14px;
+  }
+  
+
