--- a/frontdend/assets/css/main.css
+++ b/frontdend/assets/css/main.css
@@ -3,11 +3,12 @@
 }
 .header {
     background-color: #02bbff;
-    height: 25%;
+    height: 20%;
     width: 100%;
-    /* display: table;
-  position: fixed; */
+    display: table;
+    /* position: fixed; */
     /* width: 100%; */
+    /* top: 0; */
 }
 .header-with-search {
     display: flex;
@@ -129,7 +130,7 @@
     border-radius: 5px;
 }
 .header-with-menu ul li:hover a,
-.menu-child:hover ul li:hover a {
+.menu-child li:hover {
     color: var(--main-color);
 }
 .header-with-menu ul .menu-slected a {
@@ -138,10 +139,10 @@
 .menu-child ul {
     display: none;
     padding: 5px;
-    position: fixed;
+    position: absolute;
     min-width: 350px;
     margin-top: 10px;
-    background-color: var(--main-color);
+    background-color: var(--white-color);
     border-radius: 5px;
 }
 .menu-child:hover ul {
@@ -151,7 +152,7 @@
     display: block;
 }
 .menu-child:hover ul li a {
-    color: var(--white-color);
+    color: var(--main-color);
 }
 .footer {
     width: 100%;
@@ -234,6 +235,10 @@ p {
 }
 .item__footer .center li {
     display: inline-block;
+}
+.item__footer img {
+    width: 100%;
+    height: 100%;
 }
 .border {
     margin-top: 20px;
@@ -461,4 +466,24 @@ p {
 .banner img {
     width: 100%;
     height: 100%;
+}
+#myBtn {
+    display: block; /* Hidden by default */
+    position: fixed; /* Fixed/sticky position */
+    bottom: 20px; /* Place the button at the bottom of the page */
+    right: 30px; /* Place the button 30px from the right */
+    z-index: 99; /* Make sure it does not overlap */
+    border: none; /* Remove borders */
+    outline: none; /* Remove outline */
+
+    color: white; /* Text color */
+    cursor: pointer; /* Add a mouse pointer on hover */
+    padding: 15px; /* Some padding */
+    border-radius: 10px; /* Rounded corners */
+    font-size: 18px; /* Increase font size */
+    /* transition: all 0.5s; */
+}
+
+#myBtn:hover {
+    background-color: #555; /* Add a dark-grey background on hover */
 }
