--- a/fondend/cart/css-infor-user.css
+++ b/fondend/cart/css-infor-user.css
@@ -21,6 +21,21 @@
     border-radius: 2px;
     transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 }
+.infor_user select{
+    display: block;
+    width: 85%;
+    min-height: calc(1.5em + 0.75rem + 2px);
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #495057;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: 2px;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
 .edit_password{
     padding: 10% 5% 0% 5%;
 }
