Update Search Bar

--- a/frontdend/assets/css/main.css
+++ b/frontdend/assets/css/main.css
@@ -26,12 +26,18 @@
     height: 4rem;
     width: 55%;
 }
-.header__search input[type='search'] {
+.header__search input[type='text'] {
     width: 100%;
     border-radius: 5px 0px 0px 5px;
     border: 1px solid var(--white-color);
     border-right: unset;
     height: 100%;
+    transition: color 0.3s, border 0.3s, background 0.3s, opacity 0.3s;
+    vertical-align: middle;
+    appearance: none;
+    position: relative;
+    outline: unset;
+    font-size: 1.2vw;
 }
 .header__search input[type='search']:focus-visible {
     outline: unset;
@@ -154,6 +160,7 @@
 .menu-child:hover ul li a {
     color: var(--main-color);
 }
+
 .footer {
     width: 100%;
     margin-top: 1.25rem;
@@ -459,6 +466,27 @@ p {
     box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
     transition: all 0.5s;
 }
+.item-child {
+    position: relative;
+}
+.sale {
+    background-image: url(https://book365.vn/bitrix/templates/book365-2021/images/background_sale_ebook.png);
+    background-repeat: no-repeat;
+    width: 2.93vw;
+    padding-top: 1.39vw;
+    font-size: 1.1vw;
+    line-height: 0.59vw;
+    color: #ff0000;
+    font-weight: 600;
+    font-family: 'Roboto', sans-serif;
+    right: 2%;
+    background-size: contain !important;
+    top: 2%;
+    height: 3.44vw;
+    text-align: center;
+    position: absolute;
+    z-index: 1;
+}
 .banner {
     text-align: center;
     margin: 20px;
@@ -467,23 +495,79 @@ p {
     width: 100%;
     height: 100%;
 }
-#myBtn {
-    display: block; /* Hidden by default */
-    position: fixed; /* Fixed/sticky position */
-    bottom: 20px; /* Place the button at the bottom of the page */
-    right: 30px; /* Place the button 30px from the right */
-    z-index: 99; /* Make sure it does not overlap */
-    border: none; /* Remove borders */
-    outline: none; /* Remove outline */
-
-    color: white; /* Text color */
-    cursor: pointer; /* Add a mouse pointer on hover */
-    padding: 15px; /* Some padding */
-    border-radius: 10px; /* Rounded corners */
-    font-size: 18px; /* Increase font size */
-    /* transition: all 0.5s; */
+.wrapper {
+    display: flex;
+    align-items: center;
+    height: 4rem;
+    width: 55%;
+    border-radius: 5px;
 }
-
-#myBtn:hover {
-    background-color: #555; /* Add a dark-grey background on hover */
+.wrapper .search-input {
+    width: 100%;
+    border-radius: 5px;
+    border: 1px solid var(--white-color);
+    border-right: unset;
+    height: 100%;
+    transition: color 0.3s, border 0.3s, background 0.3s, opacity 0.3s;
+    vertical-align: middle;
+    appearance: none;
+    position: relative;
+    outline: unset;
+}
+.search-input input {
+    border-radius: 5px;
+    height: 100%;
+    width: 100%;
+    outline: none;
+    border: none;
+    border-radius: 5px;
+    padding: 0 60px 0 20px;
+    font-size: 18px;
+    box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.1);
+}
+.search-input.active input {
+    border-radius: 5px;
+}
+.search-input .autocom-box {
+    padding: 0;
+    opacity: 0;
+    pointer-events: none;
+    max-height: 280px;
+    overflow-y: auto;
+    margin-top: 5px;
+    border-radius: 5px;
+    width: 95%;
+    background-color: var(--white-color);
+}
+.search-input.active .autocom-box {
+    padding: 10px 8px;
+    opacity: 1;
+    pointer-events: auto;
+}
+.autocom-box li {
+    list-style: none;
+    padding: 8px 12px;
+    display: none;
+    width: 100%;
+    cursor: default;
+    border-radius: 5px;
+    font-size: 1vw;
+}
+.search-input.active .autocom-box li {
+    display: block;
+}
+.autocom-box li:hover {
+    background: #efefef;
+}
+.search-input .icon {
+    position: absolute;
+    right: 1%;
+    top: 0px;
+    /* height: 55px;
+    width: 55px; */
+    text-align: center;
+    line-height: 4rem;
+    font-size: 2rem;
+    color: #644bff;
+    cursor: pointer;
 }
