--- a/backend/public/admin/custom_admin/customOrderDetail.css
+++ b/backend/public/admin/custom_admin/customOrderDetail.css
@@ -1,53 +1,78 @@
-.box-progress {
-    height: 10px;
-    width: 100%;
-}
-
-.progress {
-    background: black;
-    justify-content: flex-start;
-    border-radius: 100px;
-    align-items: center;
+.track {
     position: relative;
+    background-color: #ddd;
+    height: 7px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    height: 10px;
-    width: 100%;
+    margin-bottom: 60px;
+    margin-top: 70px;
     cursor: pointer;
 }
 
-.progress-value {
-    animation: 3s normal forwards;
-    box-shadow: 0 10px 40px -10px #fff;
-    border-radius: 100px;
-    background: #e03f97;
-    background: -webkit-linear-gradient(to right, #f47c34, #e03f97);
-    background: -o-linear-gradient(to right, #f47c34, #e03f97);
-    background: -moz-linear-gradient(to right, #f47c34, #e03f97);
-    background: -ms-linear-gradient(to right, #f47c34, #e03f97);
-    background: linear-gradient(to right, #f47c34, #e03f97);
-    height: 100%;
-    /* width: 0; */
-}
-
-.box-progress {
+.track .step {
+    -webkit-box-flex: 1;
+    -ms-flex-positive: 1;
+    flex-grow: 1;
+    width: 25%;
+    margin-top: -18px;
+    text-align: center;
     position: relative;
 }
 
-.legend-box {
+.track .step.active:before {
+    background: #FF5722;
+}
+
+.track .step::before {
+    height: 7px;
     position: absolute;
-    bottom: -3px;
+    content: "";
+    width: 100%;
+    left: 0;
+    top: 18px;
+}
+
+.track .step.active .icon {
+    background: #ee5435;
+    color: #fff;
+}
+
+.track .icon {
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
+    position: relative;
+    border-radius: 100%;
+    background: #ddd;
+}
+
+.track .step.active .text {
+    color: #000;
+    text-transform: capitalize;
+    font-weight: 600;
+}
+
+.track .text {
+    display: block;
+    margin-top: 7px;
+}
+
+.step-time {
+    min-width: 125px;
+    position: absolute;
+    left: 0;
+    top: -25px;
+    font-weight: 600;
+}
+
+.single-printr {
+    font-size: 16px;
+    font-weight: 500;
     cursor: pointer;
 }
 
-.legend-dots {
-    width: 1rem;
-    height: 1rem;
-    border-radius: 100%;
-    display: inline-block;
-    vertical-align: text-bottom;
-    margin-right: 0.5rem;
-}
-
-.progress-value {
-    width: 100%;
+.single-printr:hover {
+    color: #b66dff;
 }
