--- a/fondend/phungps24202/assets/css/detail.css
+++ b/fondend/phungps24202/assets/css/detail.css
@@ -216,6 +216,7 @@ span.text-muted{
     background: #900000;
 }
 /* comment */
+
 .user-wrapper .user-avatar img{
     border-radius: 50%;
     width: 50px;
@@ -225,6 +226,7 @@ span.text-muted{
 .user-wrapper{
     display: flex;
     margin-bottom: 20px;
+    line-height: 1.5;
 }
 .user-avatar{
     margin: 16px;
@@ -243,5 +245,89 @@ span.text-muted{
     color: #999;
     font-size: 14px;
   }
+
+
+  .related-title{
+    border-top: 1px solid #cbd1d6;
+    font-size: 15px;
+    text-transform: uppercase;
+    color: #2b2b2b;
+  }
+.related-book{
+  display: flex;
+  gap: 24px 0;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 12px;
+}
+.product{
+    width: 17%;
+  padding: 24px 12px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+  cursor: pointer;
+  border-radius: 5px;
+}
+.product-img {
+    width: 100%;
+    overflow: hidden;
+  }
+  
+  .image {
+    border-radius: 5px;
+    height: 300px;
+  }
+  
+  .product-img:hover .image {
+    transform: scale(1.1);
+  }
+  
+  .product-title {
+    margin-top: 12px;
+  }
+  
+  .product-name {
+    font-size: 18px;
+    font-weight: 600;
+    text-align: center;
+    display: block;
+  }
+  
+  .product-name:hover {
+    color: red;
+  }
+  
+  .product-author {
+    margin-top: 12px;
+    font-size: 18px;
+    color: #0066ff;
+    font-weight: 600;
+    text-align: center;
+    display: block;
+  }
+  .product-author:hover {
+    color: red;
+  }
+  
+  .product-price {
+    margin-top: 12px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+  }
+  
+  .product-price__reduced {
+    margin-top: 0 !important;
+    font-size: 18px;
+    font-weight: 600;
+  }
+  
+  .product-price__original {
+    font-size: 15px;
+    font-weight: 600;
+    color: red;
+    padding-bottom: 20px;
+  }
+
+
   
 
