--- a/fondend/phungps24202/assets/css/detail-article.css
+++ b/fondend/phungps24202/assets/css/detail-article.css
@@ -36,8 +36,20 @@ body{
  .detail_article{
     background-color: white;
     padding: 14px;
-    display: flex;
-    flex-wrap: wrap;
+    display: block;
+    
+ }
+ .detail_article .news-name{
+    display: block;
+}
+ .detail_article span.date{
+    
+    font-size: 12px;
+    letter-spacing: 0px;
+    line-height: 30px;
+    color: #323232;
+    font-family: 'Arial';
+    margin-right: 10px;
  }
  .news-img{
     max-width: 100%;
@@ -48,11 +60,33 @@ body{
  .news_detail{
     padding: 20px;
     color: #333333;
-    text-align: center;
+    /* text-align: center; */
+    
     font: 16px Arial;
+ }
+ .news_detail p{
+    line-height: 1.5;
+ }
+ .news_detail strong{
+    line-height: 1.5;
  }
  .related-news{
     margin-top: 10px;
+ }
+ .related-news h4{
+    font-size: 16px;
+    letter-spacing: 0;
+    line-height: 31px;
+    color: #003a5a;
+    font-family: 'UTM AvoBold', 'sans-serif';
+    font-weight: 700;
+    text-align: center;
+    /* width: fit-content; */
+    height: 31px;
+    background-color: #eef1f3;
+    text-transform: uppercase;
+    padding: 0 15px;
+    margin-top: 0;
  }
  .tieu-diem{
     display: flex;
@@ -69,6 +103,7 @@ body{
     padding: 24px 12px;
     cursor: pointer;
     border-radius: 5px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
  }
  .tieu-diem .tieu-diem_list img{    
     width: 100%;
@@ -83,13 +118,14 @@ body{
     font-family: "Arial";
     font-weight: bold;
     text-align: left;
+   
  }
  /* Sidebar Styles */
 .sidebar {
 	flex: 0 0 calc(25% - 10px);
 	margin-left: 20px;
     background-color: white;
-    height: 829px;
+    height: auto;
     padding: 10px;
 }
     
@@ -99,37 +135,62 @@ body{
     
     .categories h2 {
     margin-bottom: 10px;
+    font-size: 12px;
+    letter-spacing: 0px;
+    line-height: 31px;
+    color: #ffffff;
+    font-family: 'UTM AvoBold', 'sans-serif';
+    font-weight: bold;
+    width: max-content;
+    height: 31px;
+    background-color: #228B22;
+    text-align: center;
+    text-transform: uppercase;
+    padding: 0px 15px;
     }
     
-    .categories ul {
+    .categories_detail {
     list-style: none;
     padding: 0;
     margin: 0;
+    line-height: 1.5;
+    padding-bottom: 10px;
+    border-bottom: 1px solid #A9A9A9;
+    
     }
-    
-    .categories li {
-    
-    line-height: 1.9;
-    }
-    
-    .categories a {
+        
+    .categories_detail a {
     font-size: 15px;
     letter-spacing: 0;
     color: #323232;
     font-family: 'Arial';
     font-weight: bold;
-        text-align: left;
-        text-decoration: none;
-        margin-bottom: 10px;
-        overflow: hidden;
-        text-overflow: ellipsis;
-    border-bottom: 1px solid #323232;
+    text-align: left;
+    text-decoration: none;
+    margin-bottom: 10px;
+    overflow: hidden;
+    text-overflow: ellipsis;
     }
     
-    .categories a:hover {
+    .categories_detail a:hover {
     color: #212159;
     }
-    
+
+   /* ---  */
+    .top-view h2{
+    font-size: 12px;
+    letter-spacing: 0px;
+    line-height: 31px;
+    color: #003a5a;
+    font-family: 'UTM AvoBold', 'sans-serif';
+    font-weight: bold;
+    text-align: center;
+    text-transform: uppercase;
+    width: 177px;
+    height: 31px;
+    background-color: #eef1f3;
+    margin-bottom: 15px;
+    }
     .top-sellers {
     margin-bottom: 10px;
     }
@@ -153,7 +214,38 @@ body{
     color: #212159;
     }
     /* end sidebar */
-    .related-news{
-        position: relative;
-        display: inline-block;    
+    .topview_slide{
+        display: flex;
+        margin-top: 10px;
+        
+    }
+   .topview_slide img{
+    width: 40%;
+    height: 90px;
+}
+    .topview_slide_list{
+        padding-left: 10px;
+       line-height: 2;
+       margin-bottom: 50px;
+    }
+    .topview_slide_list a{
+        font-size: 14px;
+        letter-spacing: 0px;
+        line-height: 14px;
+        color: #000000;
+        font-weight: bold;
+        text-align: justify;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        font-family: 'Arial';
+        text-decoration: none;
+        display: block;
+    }
+    .topview_slide_list span{
+        font-size: 12px;
+        letter-spacing: 0px;
+        line-height: 18px;
+        color: #323232;
+        font-family: "Arial";
+        
     }
